[package]
name = "latitude"
version = "0.1.0"
authors = ["Dominik Spitzli <dominik@spitzli.dev>"]
edition = "2021"
description = "A crate for integrating with the Latitude API."
license = "MIT"
repository = "https://github.com/NewtTheWolf/latitude-rs"
homepage = "https://latitude.so"
keywords = ["latitude", "api", "cloud", "llm", "prompt"]
categories = ["api-bindings", "network-programming"]

[dependencies]
bytes = "1.8.0"
futures-util = "0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.130"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
uuid = "1.11.0"
