[package]
name = "latitude"
version = "0.1.0"
authors = ["Dominik Spitzli <dominik@spitzli.dev>"]
edition = "2021"
description = "A crate for integrating with the Latitude API."
license = "MIT"
repository = "https://github.com/NewtTheWolf/latitude-rs"
homepage = "https://latitude.so"
keywords = ["latitude", "api", "cloud", "llm", "prompt"]
categories = ["api-bindings", "network-programming"]

[dependencies]
async-sse = "5.1.0"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.130"
thiserror = "1.0.65"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
httpmock = "0.7.0"
